[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/2D/Hud/rotate_arrow.png" type="Texture" id=1]
[ext_resource path="res://Hud/Controls.gd" type="Script" id=2]

[node name="Controls" type="Node2D"]
script = ExtResource( 2 )

[node name="LeftColour" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 1, 1, 1, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightColour" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 1, 1, 1, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateLeft" type="TextureRect" parent="."]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 250, 250 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateRight" type="TextureRect" parent="."]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 250, 250 )
texture = ExtResource( 1 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}
